syntax = "proto3";
import "GameModel.proto";
import "NpcModel.proto";
option java_package = "com.example.worditory.game";
option java_multiple_files = true;

message NpcGameModel {
  GameModel game = 1;
  NpcModel opponent = 2;
}