syntax = "proto3";
import "GameModel.proto";
option java_package = "com.example.worditory";
option java_multiple_files = true;

message SavedGames {
  repeated GameModel games = 1;
}
