syntax = "proto3";
import "NpcGameModel.proto";
option java_package = "com.example.worditory.saved";
option java_multiple_files = true;

message SavedNpcGames {
  repeated NpcGameModel games = 1;
}
